LPS-92545 Fix web content editor sidebar z-index

--- a/modules/apps/journal/journal-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/journal/journal-web/src/main/resources/META-INF/resources/css/main.scss
@@ -118,6 +118,7 @@ $productMenuWidth: 320px;
 			height: calc(100vh - #{$controlMenuHeight * 2}) !important;
 			overflow-y: scroll;
 			top: $controlMenuHeight * 2 !important;
+			z-index: 1;
 
 			@media (min-width: 768px) {
 				height: calc(100vh - #{$controlMenuDesktopHeight * 2}) !important;
